--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,32 @@
       <%= stylesheet_link_tag    'application', :media => 'all' %>
       <%= javascript_include_tag 'application' %>
       <%= csrf_meta_tags %>
+      <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
     </head>
     <body>
-        <%= yield %>
+        <div class="navbar navbar-fixed-top navbar-inverse">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <%= link_to 'sample app', '#', :id => 'logo', :class => "navbar-brand" %>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><%= link_to 'Home', '#' %></li>
+                        <li><%= link_to 'Help', '#' %></li>
+                        <li><%= link_to 'Sign In', '#' %></li>
+                    </ul>
+                </div>
+            </div>
+          </div>
+        <div class="container theme-showcase">
+            <%= yield %>
+        </div>
     </body>
 </html>
