--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,13 @@
-<div class="center jumbotron">
+<div class="jumbotron center">
     <h1>Welcome to the Sample App</h1>
     <p>
         This is the home page for the
         <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
         sample application.
     </p>
-
-    <%= link_to 'Sign Up Now!', '#', :class => 'btn btn-large btn-primary', :role => 'button' %>
+    <p>
+        <%= link_to 'Sign Up Now!', '#', :class => "btn btn-primary btn-large", :role => "button" %>
+    </p>
 </div>
 
 <%= link_to image_tag('rails.png', :alt => 'Rails'), 'http://rubyonrails.org/'%>
